--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         
         <div class="input-group">
-            <label>బియ్యం బస్తాలు :</label>
+            <label>అయిన బియ్యం బస్తాలు :</label>
             <input type="number" id="biyyamBags" min="0">
         </div>
         
